# EDAPipeline

./: .gitignore  LICENSE  README.md  chnagelog.md  new_features_v0.1.4.md  pyproject.toml  setup.cfg  setup.cfg.backup  setup.cfg.old
src/edapipeline/: __init__.py  core.py  utils.py
src/edapipeline.egg-info/: PKG-INFO
tests/: test_edapipeline.py
